# converter-buddy

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/config/: mod.rs
src/converter/: error.rs  mod.rs  queue.rs  traits.rs  utils.rs
src/converter/img/: bmp.rs  gif.rs  jpeg.rs  mod.rs  png.rs  svg.rs  tiff.rs  webp.rs
src/converter/img/img_utils/: common_strategies.rs  mod.rs  processing.rs  wrapper.rs
src/converter_info/: mod.rs  traits.rs  utils.rs
src/converter_info/img/: bmp.rs  gif.rs  jpeg.rs  mod.rs  png.rs  svg.rs  tiff.rs  webp.rs
src/decoder/: mod.rs  pdf.rs  svg.rs
src/format/: enumerator.rs  interop.rs  mod.rs  utils.rs
src/format/info/: data.rs  mod.rs  structure.rs
src/io/: convertible.rs  error.rs  mod.rs
tests/assets/: test.tiff
