[package]
name = "converter_buddy"
version = "0.2.1"
edition = "2021"

license = "MIT"
description = "File format conversion library. Provides conversion utilities between files with different formats."
authors = ["Attilio Oliva <attilio.oliva@protonmail.com>"]
readme = "README.md"

# crates.io metadata
documentation = "https://docs.rs/converter_buddy"
repository = "https://github.com/attilio-oliva/converter-buddy"
homepage = "https://github.com/attilio-oliva/converter-buddy"
categories = ["encoding", "multimedia::images", "multimedia::encoding"]
keywords = ["convert", "file", "format", "extension"]

[dependencies]
once_cell = "1.10.0"
image = "0.24.1"
resvg = "0.22.0"
usvg = "0.22.0"
tiny-skia = "0.6.3"
strum = { version = "0.24.0", features = ["derive"]}
strum_macros = "0.24"
pdf-writer = "0.6"
miniz_oxide = "0.5.3"
derive_builder = "0.12.0"
paste = "1.0.12"
smart-default = "0.6.0"

[dev-dependencies]
test-case = "3.1.0"

[features]
default = ["formats", "converters", "io", "decoders"]
formats = []
converters = ["formats", "decoders", "converters-info"]
io = ["converters", "converters-info"]
decoders = []
converters-info = ["formats"]

[lib]
name = "converter_buddy"
path = "./src/lib.rs"
